// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer the footer 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  display: grid;
  grid-gap: 16px;
  grid-template-columns: 1fr;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  justify-self: end;
  font-size: 12px;
  font-weight: 200;
  font-style: italic;
  font-family: 'IBM Plex Mono','Courier New',Serif;
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <footer
        class="c0"
      >
        <span
          class="c1"
        >
          Made with passion in Brooklyn, NY
        </span>
      </footer>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <footer
      class="sc-1cn8ycr-0 jqVjTE"
    >
      <span
        class="sc-1cn8ycr-1 eVOZJs"
      >
        Made with passion in Brooklyn, NY
      </span>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots HeaderTitle header title 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c2 {
  fill: var(--brand);
}

.c1 {
  padding-bottom: 2px;
  margin-right: -8px;
}

.c0 {
  color: var(--darkgrey);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  font-size: 32px;
  line-height: 47px;
  font-weight: 300;
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c0 {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 123px auto;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <h1
        class="c0"
      >
        <a
          class="c1"
        >
          <svg
            class="c2"
            height="28px"
            name="Unlock"
            viewBox="0 0 1200 256"
          >
            <path
              d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
            />
          </svg>
        </a>
        <span
          class="c3"
        >
          Roses are red
        </span>
      </h1>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <h1
      class="sc-12d5f0e-1 cmejna"
    >
      <a
        class="sc-12d5f0e-0 ddMsvb"
      >
        <svg
          class="sc-sth0f3-0 lfthSy"
          height="28px"
          name="Unlock"
          viewBox="0 0 1200 256"
        >
          <path
            d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
          />
        </svg>
      </a>
      <span
        class="sc-12d5f0e-2 czLjIr"
      >
        Roses are red
      </span>
    </h1>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Landing Page The Landing Page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c6 {
  fill: var(--brand);
}

.c5 {
  padding-bottom: 2px;
  margin-right: -8px;
}

.c4 {
  color: var(--darkgrey);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  font-size: 32px;
  line-height: 47px;
  font-weight: 300;
}

.c3 {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 1fr auto;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 70px;
}

.c16 {
  margin-top: 24px;
  margin-bottom: 24px;
  display: grid;
  grid-gap: 16px;
  grid-template-columns: 1fr;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  justify-self: end;
  font-size: 12px;
  font-weight: 200;
  font-style: italic;
  font-family: 'IBM Plex Mono','Courier New',Serif;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr minmax(280px,4fr) 1fr;
}

.c1 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 24px;
}

.c2 {
  color: var(--darkgrey);
  display: grid;
  row-gap: 24px;
  width: 100%;
}

.c8 {
  font-family: IBM Plex Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 36px;
  font-style: light;
  line-height: 47px;
  grid-column: 1 3;
  color: var(--darkgrey);
}

.c9 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 32px;
  line-height: 42px;
  grid-column: 1 / span 3;
  color: var(--darkgrey);
}

.c10 p {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: normal;
}

.c11 {
  margin-top: -45px;
  float: right;
}

.c12 {
  border-top: solid 3px var(--silver);
  width: 88px;
}

.c13 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: normal;
}

.c14 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  line-height: 22px;
}

.c15 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: normal;
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c4 {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 123px auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c3 {
    grid-template-columns: [first] 1fr [second] 48px;
    grid-template-rows: [first] auto;
    height: auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c1 {
    display: none;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c18 {
    display: none;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c11 {
    margin-top: initial;
    float: unset;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

<body>
    <div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <div
        class="c0"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <header
            class="c3"
          >
            <h1
              class="c4"
            >
              <a
                class="c5"
              >
                <svg
                  class="c6"
                  height="28px"
                  name="Unlock"
                  viewBox="0 0 1200 256"
                >
                  <path
                    d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                  />
                </svg>
              </a>
              <span
                class="c7"
              >
                Paywall
              </span>
            </h1>
          </header>
          <section>
            <h1
              class="c8"
            >
              Pay for Content Seamlessly
            </h1>
            <h2
              class="c9"
            >
              Unlock enables anyone with a crypto wallet to seamlessly buy and manage access to any kind of content.
            </h2>
          </section>
          <div
            class="c10"
          >
            <svg
              class="c11"
              fill="none"
              height="245px"
              viewBox="0 0 201 245"
              width="200px"
            >
              <path
                clip-rule="evenodd"
                d="M38.46 28.488a8.547 8.547 0 00-8.547 8.547v199.419A8.546 8.546 0 0038.459 245h153.837a8.547 8.547 0 008.547-8.546V37.034a8.547 8.547 0 00-8.547-8.546H38.459zm17.26 60.758a5.698 5.698 0 00-5.698 5.698v3.71a5.698 5.698 0 005.697 5.698h119.316a5.698 5.698 0 005.698-5.698v-3.71a5.698 5.698 0 00-5.698-5.698H55.719zm-5.698-27.693A7.553 7.553 0 0157.574 54H173.18a7.553 7.553 0 010 15.105H57.574a7.553 7.553 0 01-7.552-7.553zm7.552 62.939a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574zm-7.552 78.045a7.552 7.552 0 017.552-7.552h70.36a7.553 7.553 0 110 15.105h-70.36a7.553 7.553 0 01-7.552-7.553zm7.552-42.799a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574z"
                fill="#A6A6A6"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M42.02 84.04c23.208 0 42.02-18.813 42.02-42.02C84.04 18.813 65.228 0 42.02 0 18.813 0 0 18.813 0 42.02c0 23.208 18.813 42.02 42.02 42.02z"
                fill="#ED6E82"
                fill-rule="evenodd"
              />
              <path
                d="M21.488 43.773A11.779 11.779 0 0134.903 41.5L57.7 18.703l5.571 5.57-2.785 2.786 5.57 5.571-5.57 5.572-5.572-5.572-14.44 14.44a11.778 11.778 0 01-2.273 13.416 11.818 11.818 0 11-16.713-16.713zM32.63 54.915a3.946 3.946 0 000-5.571 3.946 3.946 0 00-5.571 0 3.946 3.946 0 000 5.571 3.946 3.946 0 005.57 0z"
                fill="#fff"
              />
              <path
                d="M52.129 35.416l5.571 5.571-5.571 5.571-5.571-5.57 5.57-5.572z"
                fill="#fff"
              />
            </svg>
            <p>
              At Unlock, we believe that the more accessible paid content is the better it will be. To do that we’re making it easy for readers like you to seamlessly pay for and manage your content.
            </p>
            <p>
              If you want to know more about Unlock’s decentralized payment protocol check out our blog.
            </p>
          </div>
          <section>
            <h1
              class="c8 c12"
            >
              FAQ
            </h1>
            <dl
              class="c13"
            >
              How do I get a wallet?
            </dl>
            <dt
              class="c14"
            >
              You need a web3 enabled wallet such as MetaMask for Chrome or Opera for Android.
            </dt>
            <dl
              class="c13"
            >
              What does it cost to use Unlock?
            </dl>
            <dt
              class="c14"
            >
              Unlock is free to use though you will have to pay a small transaction fee when purchasing your content. It’s usually just a few cents on top of your purchase.
            </dt>
            <dl
              class="c13"
            >
              What about privacy?
            </dl>
            <dt
              class="c14"
            >
              Unlock does not collect any personal information. Like all transactions on the the Ethereum blockchain, details about Unlock transactions are captured in its ledger in an anonymous form.
            </dt>
          </section>
          <section>
            <h1
              class="c8 c12"
            />
            <div
              class="c15"
            >
              Check out our open source code on
               
              <a
                href="https://github.com/unlock-protocol/unlock"
              >
                GitHub
              </a>
              , come
               
              <a
                href="https://unlock-protocol.com/jobs"
              >
                work with us
              </a>
               or simply
               
              <a
                href="mailto:hello@unlock-protocol.com"
              >
                get in touch
              </a>
              .
            </div>
          </section>
          <footer
            class="c16"
          >
            <span
              class="c17"
            >
              Made with passion in Brooklyn, NY
            </span>
          </footer>
        </div>
        <div
          class="c18"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <div
      class="sc-gmrrpf-0 GDrVm"
    >
      <div
        class="sc-gmrrpf-1 jETTYD"
      />
      <div
        class="sc-gmrrpf-3 jFZdOp"
      >
        <header
          class="sc-4839jp-0 bPQpSC"
        >
          <h1
            class="sc-12d5f0e-1 cmejna"
          >
            <a
              class="sc-12d5f0e-0 ddMsvb"
            >
              <svg
                class="sc-sth0f3-0 lfthSy"
                height="28px"
                name="Unlock"
                viewBox="0 0 1200 256"
              >
                <path
                  d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                />
              </svg>
            </a>
            <span
              class="sc-12d5f0e-2 czLjIr"
            >
              Paywall
            </span>
          </h1>
        </header>
        <section>
          <h1
            class="sc-1m7p3zh-0 ceqgCZ"
          >
            Pay for Content Seamlessly
          </h1>
          <h2
            class="sc-1m7p3zh-1 hQYRba"
          >
            Unlock enables anyone with a crypto wallet to seamlessly buy and manage access to any kind of content.
          </h2>
        </section>
        <div
          class="sc-1m7p3zh-2 cfFEQE"
        >
          <svg
            class="sc-1m7p3zh-3 fqGXjD"
            fill="none"
            height="245px"
            viewBox="0 0 201 245"
            width="200px"
          >
            <path
              clip-rule="evenodd"
              d="M38.46 28.488a8.547 8.547 0 00-8.547 8.547v199.419A8.546 8.546 0 0038.459 245h153.837a8.547 8.547 0 008.547-8.546V37.034a8.547 8.547 0 00-8.547-8.546H38.459zm17.26 60.758a5.698 5.698 0 00-5.698 5.698v3.71a5.698 5.698 0 005.697 5.698h119.316a5.698 5.698 0 005.698-5.698v-3.71a5.698 5.698 0 00-5.698-5.698H55.719zm-5.698-27.693A7.553 7.553 0 0157.574 54H173.18a7.553 7.553 0 010 15.105H57.574a7.553 7.553 0 01-7.552-7.553zm7.552 62.939a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574zm-7.552 78.045a7.552 7.552 0 017.552-7.552h70.36a7.553 7.553 0 110 15.105h-70.36a7.553 7.553 0 01-7.552-7.553zm7.552-42.799a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574z"
              fill="#A6A6A6"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M42.02 84.04c23.208 0 42.02-18.813 42.02-42.02C84.04 18.813 65.228 0 42.02 0 18.813 0 0 18.813 0 42.02c0 23.208 18.813 42.02 42.02 42.02z"
              fill="#ED6E82"
              fill-rule="evenodd"
            />
            <path
              d="M21.488 43.773A11.779 11.779 0 0134.903 41.5L57.7 18.703l5.571 5.57-2.785 2.786 5.57 5.571-5.57 5.572-5.572-5.572-14.44 14.44a11.778 11.778 0 01-2.273 13.416 11.818 11.818 0 11-16.713-16.713zM32.63 54.915a3.946 3.946 0 000-5.571 3.946 3.946 0 00-5.571 0 3.946 3.946 0 000 5.571 3.946 3.946 0 005.57 0z"
              fill="#fff"
            />
            <path
              d="M52.129 35.416l5.571 5.571-5.571 5.571-5.571-5.57 5.57-5.572z"
              fill="#fff"
            />
          </svg>
          <p>
            At Unlock, we believe that the more accessible paid content is the better it will be. To do that we’re making it easy for readers like you to seamlessly pay for and manage your content.
          </p>
          <p>
            If you want to know more about Unlock’s decentralized payment protocol check out our blog.
          </p>
        </div>
        <section>
          <h1
            class="sc-1m7p3zh-0 sc-1m7p3zh-4 ceqgCZ ijvgYK"
          >
            FAQ
          </h1>
          <dl
            class="sc-1m7p3zh-5 clZFdO"
          >
            How do I get a wallet?
          </dl>
          <dt
            class="sc-1m7p3zh-6 eoqktX"
          >
            You need a web3 enabled wallet such as MetaMask for Chrome or Opera for Android.
          </dt>
          <dl
            class="sc-1m7p3zh-5 clZFdO"
          >
            What does it cost to use Unlock?
          </dl>
          <dt
            class="sc-1m7p3zh-6 eoqktX"
          >
            Unlock is free to use though you will have to pay a small transaction fee when purchasing your content. It’s usually just a few cents on top of your purchase.
          </dt>
          <dl
            class="sc-1m7p3zh-5 clZFdO"
          >
            What about privacy?
          </dl>
          <dt
            class="sc-1m7p3zh-6 eoqktX"
          >
            Unlock does not collect any personal information. Like all transactions on the the Ethereum blockchain, details about Unlock transactions are captured in its ledger in an anonymous form.
          </dt>
        </section>
        <section>
          <h1
            class="sc-1m7p3zh-0 sc-1m7p3zh-4 ceqgCZ ijvgYK"
          />
          <div
            class="sc-1m7p3zh-7 iaLJxA"
          >
            Check out our open source code on
             
            <a
              href="https://github.com/unlock-protocol/unlock"
            >
              GitHub
            </a>
            , come
             
            <a
              href="https://unlock-protocol.com/jobs"
            >
              work with us
            </a>
             or simply
             
            <a
              href="mailto:hello@unlock-protocol.com"
            >
              get in touch
            </a>
            .
          </div>
        </section>
        <footer
          class="sc-1cn8ycr-0 jqVjTE"
        >
          <span
            class="sc-1cn8ycr-1 eVOZJs"
          >
            Made with passion in Brooklyn, NY
          </span>
        </footer>
      </div>
      <div
        class="sc-gmrrpf-2 cPuuaA"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Layout the layout with menu 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c6 {
  fill: var(--brand);
}

.c5 {
  padding-bottom: 2px;
  margin-right: -8px;
}

.c4 {
  color: var(--darkgrey);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  font-size: 32px;
  line-height: 47px;
  font-weight: 300;
}

.c3 {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 1fr auto;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 70px;
}

.c8 {
  margin-top: 24px;
  margin-bottom: 24px;
  display: grid;
  grid-gap: 16px;
  grid-template-columns: 1fr;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  justify-self: end;
  font-size: 12px;
  font-weight: 200;
  font-style: italic;
  font-family: 'IBM Plex Mono','Courier New',Serif;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr minmax(280px,4fr) 1fr;
}

.c1 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 24px;
}

.c2 {
  color: var(--darkgrey);
  display: grid;
  row-gap: 24px;
  width: 100%;
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c4 {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 123px auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c3 {
    grid-template-columns: [first] 1fr [second] 48px;
    grid-template-rows: [first] auto;
    height: auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c1 {
    display: none;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c10 {
    display: none;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <div
        class="c0"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <header
            class="c3"
          >
            <h1
              class="c4"
            >
              <a
                class="c5"
              >
                <svg
                  class="c6"
                  height="28px"
                  name="Unlock"
                  viewBox="0 0 1200 256"
                >
                  <path
                    d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                  />
                </svg>
              </a>
              <span
                class="c7"
              >
                Paywall
              </span>
            </h1>
          </header>
          <footer
            class="c8"
          >
            <span
              class="c9"
            >
              Made with passion in Brooklyn, NY
            </span>
          </footer>
        </div>
        <div
          class="c10"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <div
      class="sc-gmrrpf-0 GDrVm"
    >
      <div
        class="sc-gmrrpf-1 jETTYD"
      />
      <div
        class="sc-gmrrpf-3 jFZdOp"
      >
        <header
          class="sc-4839jp-0 bPQpSC"
        >
          <h1
            class="sc-12d5f0e-1 cmejna"
          >
            <a
              class="sc-12d5f0e-0 ddMsvb"
            >
              <svg
                class="sc-sth0f3-0 lfthSy"
                height="28px"
                name="Unlock"
                viewBox="0 0 1200 256"
              >
                <path
                  d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                />
              </svg>
            </a>
            <span
              class="sc-12d5f0e-2 czLjIr"
            >
              Paywall
            </span>
          </h1>
        </header>
        <footer
          class="sc-1cn8ycr-0 jqVjTE"
        >
          <span
            class="sc-1cn8ycr-1 eVOZJs"
          >
            Made with passion in Brooklyn, NY
          </span>
        </footer>
      </div>
      <div
        class="sc-gmrrpf-2 cPuuaA"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Layout the layout without menu 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c6 {
  fill: var(--brand);
}

.c5 {
  padding-bottom: 2px;
  margin-right: -8px;
}

.c4 {
  color: var(--darkgrey);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  font-size: 32px;
  line-height: 47px;
  font-weight: 300;
}

.c3 {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 1fr auto;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 70px;
}

.c8 {
  margin-top: 24px;
  margin-bottom: 24px;
  display: grid;
  grid-gap: 16px;
  grid-template-columns: 1fr;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  justify-self: end;
  font-size: 12px;
  font-weight: 200;
  font-style: italic;
  font-family: 'IBM Plex Mono','Courier New',Serif;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr minmax(280px,4fr) 1fr;
}

.c1 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 24px;
}

.c2 {
  color: var(--darkgrey);
  display: grid;
  row-gap: 24px;
  width: 100%;
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c4 {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 123px auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c3 {
    grid-template-columns: [first] 1fr [second] 48px;
    grid-template-rows: [first] auto;
    height: auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c1 {
    display: none;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c10 {
    display: none;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <div
        class="c0"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <header
            class="c3"
          >
            <h1
              class="c4"
            >
              <a
                class="c5"
              >
                <svg
                  class="c6"
                  height="28px"
                  name="Unlock"
                  viewBox="0 0 1200 256"
                >
                  <path
                    d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                  />
                </svg>
              </a>
              <span
                class="c7"
              >
                Paywall
              </span>
            </h1>
          </header>
          <footer
            class="c8"
          >
            <span
              class="c9"
            >
              Made with passion in Brooklyn, NY
            </span>
          </footer>
        </div>
        <div
          class="c10"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <div
      class="sc-gmrrpf-0 GDrVm"
    >
      <div
        class="sc-gmrrpf-1 jETTYD"
      />
      <div
        class="sc-gmrrpf-3 jFZdOp"
      >
        <header
          class="sc-4839jp-0 bPQpSC"
        >
          <h1
            class="sc-12d5f0e-1 cmejna"
          >
            <a
              class="sc-12d5f0e-0 ddMsvb"
            >
              <svg
                class="sc-sth0f3-0 lfthSy"
                height="28px"
                name="Unlock"
                viewBox="0 0 1200 256"
              >
                <path
                  d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                />
              </svg>
            </a>
            <span
              class="sc-12d5f0e-2 czLjIr"
            >
              Paywall
            </span>
          </h1>
        </header>
        <footer
          class="sc-1cn8ycr-0 jqVjTE"
        >
          <span
            class="sc-1cn8ycr-1 eVOZJs"
          >
            Made with passion in Brooklyn, NY
          </span>
        </footer>
      </div>
      <div
        class="sc-gmrrpf-2 cPuuaA"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots LeftHeader header, no icons 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c3 {
  fill: var(--brand);
}

.c2 {
  padding-bottom: 2px;
  margin-right: -8px;
}

.c1 {
  color: var(--darkgrey);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  font-size: 32px;
  line-height: 47px;
  font-weight: 300;
}

.c0 {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 1fr auto;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 70px;
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c1 {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 123px auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c0 {
    grid-template-columns: [first] 1fr [second] 48px;
    grid-template-rows: [first] auto;
    height: auto;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <header
        class="c0"
      >
        <h1
          class="c1"
        >
          <a
            class="c2"
          >
            <svg
              class="c3"
              height="28px"
              name="Unlock"
              viewBox="0 0 1200 256"
            >
              <path
                d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
              />
            </svg>
          </a>
          <span
            class="c4"
          >
            Roses are red
          </span>
        </h1>
      </header>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <header
      class="sc-4839jp-0 bPQpSC"
    >
      <h1
        class="sc-12d5f0e-1 cmejna"
      >
        <a
          class="sc-12d5f0e-0 ddMsvb"
        >
          <svg
            class="sc-sth0f3-0 lfthSy"
            height="28px"
            name="Unlock"
            viewBox="0 0 1200 256"
          >
            <path
              d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
            />
          </svg>
        </a>
        <span
          class="sc-12d5f0e-2 czLjIr"
        >
          Roses are red
        </span>
      </h1>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Paywall landing page Landing page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c6 {
  fill: var(--brand);
}

.c5 {
  padding-bottom: 2px;
  margin-right: -8px;
}

.c4 {
  color: var(--darkgrey);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c7 {
  font-size: 32px;
  line-height: 47px;
  font-weight: 300;
}

.c3 {
  display: grid;
  grid-gap: 0;
  grid-template-columns: 1fr auto;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 70px;
}

.c16 {
  margin-top: 24px;
  margin-bottom: 24px;
  display: grid;
  grid-gap: 16px;
  grid-template-columns: 1fr;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  justify-self: end;
  font-size: 12px;
  font-weight: 200;
  font-style: italic;
  font-family: 'IBM Plex Mono','Courier New',Serif;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr minmax(280px,4fr) 1fr;
}

.c1 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 24px;
}

.c2 {
  color: var(--darkgrey);
  display: grid;
  row-gap: 24px;
  width: 100%;
}

.c8 {
  font-family: IBM Plex Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 36px;
  font-style: light;
  line-height: 47px;
  grid-column: 1 3;
  color: var(--darkgrey);
}

.c9 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 32px;
  line-height: 42px;
  grid-column: 1 / span 3;
  color: var(--darkgrey);
}

.c10 p {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: normal;
}

.c11 {
  margin-top: -45px;
  float: right;
}

.c12 {
  border-top: solid 3px var(--silver);
  width: 88px;
}

.c13 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: normal;
}

.c14 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  line-height: 22px;
}

.c15 {
  font-family: IBM Plex Serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  line-height: normal;
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c4 {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 123px auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c3 {
    grid-template-columns: [first] 1fr [second] 48px;
    grid-template-rows: [first] auto;
    height: auto;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c1 {
    display: none;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c18 {
    display: none;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media only screen and (min-width:257px) and (max-width:736px) {
  .c11 {
    margin-top: initial;
    float: unset;
    -webkit-align-self: center;
    -ms-flex-item-align: center;
    align-self: center;
  }
}

<div>
      <link
        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
        rel="stylesheet"
      />
      <div
        class="c0"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <header
            class="c3"
          >
            <h1
              class="c4"
            >
              <a
                class="c5"
              >
                <svg
                  class="c6"
                  height="28px"
                  name="Unlock"
                  viewBox="0 0 1200 256"
                >
                  <path
                    d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                  />
                </svg>
              </a>
              <span
                class="c7"
              >
                Paywall
              </span>
            </h1>
          </header>
          <section>
            <h1
              class="c8"
            >
              Pay for Content Seamlessly
            </h1>
            <h2
              class="c9"
            >
              Unlock enables anyone with a crypto wallet to seamlessly buy and manage access to any kind of content.
            </h2>
          </section>
          <div
            class="c10"
          >
            <svg
              class="c11"
              fill="none"
              height="245px"
              viewBox="0 0 201 245"
              width="200px"
            >
              <path
                clip-rule="evenodd"
                d="M38.46 28.488a8.547 8.547 0 00-8.547 8.547v199.419A8.546 8.546 0 0038.459 245h153.837a8.547 8.547 0 008.547-8.546V37.034a8.547 8.547 0 00-8.547-8.546H38.459zm17.26 60.758a5.698 5.698 0 00-5.698 5.698v3.71a5.698 5.698 0 005.697 5.698h119.316a5.698 5.698 0 005.698-5.698v-3.71a5.698 5.698 0 00-5.698-5.698H55.719zm-5.698-27.693A7.553 7.553 0 0157.574 54H173.18a7.553 7.553 0 010 15.105H57.574a7.553 7.553 0 01-7.552-7.553zm7.552 62.939a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574zm-7.552 78.045a7.552 7.552 0 017.552-7.552h70.36a7.553 7.553 0 110 15.105h-70.36a7.553 7.553 0 01-7.552-7.553zm7.552-42.799a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574z"
                fill="#A6A6A6"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M42.02 84.04c23.208 0 42.02-18.813 42.02-42.02C84.04 18.813 65.228 0 42.02 0 18.813 0 0 18.813 0 42.02c0 23.208 18.813 42.02 42.02 42.02z"
                fill="#ED6E82"
                fill-rule="evenodd"
              />
              <path
                d="M21.488 43.773A11.779 11.779 0 0134.903 41.5L57.7 18.703l5.571 5.57-2.785 2.786 5.57 5.571-5.57 5.572-5.572-5.572-14.44 14.44a11.778 11.778 0 01-2.273 13.416 11.818 11.818 0 11-16.713-16.713zM32.63 54.915a3.946 3.946 0 000-5.571 3.946 3.946 0 00-5.571 0 3.946 3.946 0 000 5.571 3.946 3.946 0 005.57 0z"
                fill="#fff"
              />
              <path
                d="M52.129 35.416l5.571 5.571-5.571 5.571-5.571-5.57 5.57-5.572z"
                fill="#fff"
              />
            </svg>
            <p>
              At Unlock, we believe that the more accessible paid content is the better it will be. To do that we’re making it easy for readers like you to seamlessly pay for and manage your content.
            </p>
            <p>
              If you want to know more about Unlock’s decentralized payment protocol check out our blog.
            </p>
          </div>
          <section>
            <h1
              class="c8 c12"
            >
              FAQ
            </h1>
            <dl
              class="c13"
            >
              How do I get a wallet?
            </dl>
            <dt
              class="c14"
            >
              You need a web3 enabled wallet such as MetaMask for Chrome or Opera for Android.
            </dt>
            <dl
              class="c13"
            >
              What does it cost to use Unlock?
            </dl>
            <dt
              class="c14"
            >
              Unlock is free to use though you will have to pay a small transaction fee when purchasing your content. It’s usually just a few cents on top of your purchase.
            </dt>
            <dl
              class="c13"
            >
              What about privacy?
            </dl>
            <dt
              class="c14"
            >
              Unlock does not collect any personal information. Like all transactions on the the Ethereum blockchain, details about Unlock transactions are captured in its ledger in an anonymous form.
            </dt>
          </section>
          <section>
            <h1
              class="c8 c12"
            />
            <div
              class="c15"
            >
              Check out our open source code on
               
              <a
                href="https://github.com/unlock-protocol/unlock"
              >
                GitHub
              </a>
              , come
               
              <a
                href="https://unlock-protocol.com/jobs"
              >
                work with us
              </a>
               or simply
               
              <a
                href="mailto:hello@unlock-protocol.com"
              >
                get in touch
              </a>
              .
            </div>
          </section>
          <footer
            class="c16"
          >
            <span
              class="c17"
            >
              Made with passion in Brooklyn, NY
            </span>
          </footer>
        </div>
        <div
          class="c18"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <link
      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,400,500,700|IBM+Plex+Sans:300,400,500,700|IBM+Plex+Serif:300,400,700|Roboto:300,400,700"
      rel="stylesheet"
    />
    <div
      class="sc-gmrrpf-0 GDrVm"
    >
      <div
        class="sc-gmrrpf-1 jETTYD"
      />
      <div
        class="sc-gmrrpf-3 jFZdOp"
      >
        <header
          class="sc-4839jp-0 bPQpSC"
        >
          <h1
            class="sc-12d5f0e-1 cmejna"
          >
            <a
              class="sc-12d5f0e-0 ddMsvb"
            >
              <svg
                class="sc-sth0f3-0 lfthSy"
                height="28px"
                name="Unlock"
                viewBox="0 0 1200 256"
              >
                <path
                  d="M449.94 230.054h53.04V0h-53.04zM215.102 15.976h-55.596v55.608H70.68V15.976H15.083v55.608H0v26.42h15.083v41.626c0 52.081 45.052 94.578 100.33 94.578 54.956 0 99.689-42.497 99.689-94.578V98.004h14.964v-26.42h-14.964zM159.506 139.63c0 24.603-19.49 44.732-44.094 44.732A44.864 44.864 0 0170.68 139.63V98.004h88.826zm189.15-72.53c-19.17 0-37.703 8.626-48.247 24.282h-.639l-3.195-19.81h-46.65v158.482h53.04v-82.436c0-18.213 14.06-32.91 30.994-32.91 17.573 0 31.312 14.697 31.312 32.271v83.075h53.04v-88.187c0-42.177-26.839-74.768-69.654-74.768zm680.878 77.322l65.181-72.85h-65.5l-51.124 59.43h-.959V0h-53.04v230.054h53.04v-72.212h.96l52.72 72.212h66.78zM613.208 67.1c-49.525 0-90.423 37.703-90.423 83.714s40.898 83.395 90.423 83.395 90.424-37.384 90.424-83.395-40.898-83.714-90.424-83.714zm0 120.778c-20.13 0-37.064-16.934-37.064-37.064s16.935-37.064 37.064-37.064 37.384 16.934 37.384 37.064-17.254 37.064-37.384 37.064zm201.61-74.448c15.657 0 28.438 8.947 33.231 21.408h53.998c-5.431-37.064-41.537-67.738-86.27-67.738-49.845 0-91.063 37.703-91.063 83.714s41.218 83.395 91.064 83.395c43.773 0 81.157-29.396 86.27-68.058h-53.999c-5.752 13.1-17.574 21.408-33.23 21.408a36.955 36.955 0 01-36.744-36.745c0-20.13 16.295-37.384 36.744-37.384z"
                />
              </svg>
            </a>
            <span
              class="sc-12d5f0e-2 czLjIr"
            >
              Paywall
            </span>
          </h1>
        </header>
        <section>
          <h1
            class="sc-1m7p3zh-0 ceqgCZ"
          >
            Pay for Content Seamlessly
          </h1>
          <h2
            class="sc-1m7p3zh-1 hQYRba"
          >
            Unlock enables anyone with a crypto wallet to seamlessly buy and manage access to any kind of content.
          </h2>
        </section>
        <div
          class="sc-1m7p3zh-2 cfFEQE"
        >
          <svg
            class="sc-1m7p3zh-3 fqGXjD"
            fill="none"
            height="245px"
            viewBox="0 0 201 245"
            width="200px"
          >
            <path
              clip-rule="evenodd"
              d="M38.46 28.488a8.547 8.547 0 00-8.547 8.547v199.419A8.546 8.546 0 0038.459 245h153.837a8.547 8.547 0 008.547-8.546V37.034a8.547 8.547 0 00-8.547-8.546H38.459zm17.26 60.758a5.698 5.698 0 00-5.698 5.698v3.71a5.698 5.698 0 005.697 5.698h119.316a5.698 5.698 0 005.698-5.698v-3.71a5.698 5.698 0 00-5.698-5.698H55.719zm-5.698-27.693A7.553 7.553 0 0157.574 54H173.18a7.553 7.553 0 010 15.105H57.574a7.553 7.553 0 01-7.552-7.553zm7.552 62.939a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574zm-7.552 78.045a7.552 7.552 0 017.552-7.552h70.36a7.553 7.553 0 110 15.105h-70.36a7.553 7.553 0 01-7.552-7.553zm7.552-42.799a7.552 7.552 0 100 15.105H173.18a7.553 7.553 0 100-15.105H57.574z"
              fill="#A6A6A6"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M42.02 84.04c23.208 0 42.02-18.813 42.02-42.02C84.04 18.813 65.228 0 42.02 0 18.813 0 0 18.813 0 42.02c0 23.208 18.813 42.02 42.02 42.02z"
              fill="#ED6E82"
              fill-rule="evenodd"
            />
            <path
              d="M21.488 43.773A11.779 11.779 0 0134.903 41.5L57.7 18.703l5.571 5.57-2.785 2.786 5.57 5.571-5.57 5.572-5.572-5.572-14.44 14.44a11.778 11.778 0 01-2.273 13.416 11.818 11.818 0 11-16.713-16.713zM32.63 54.915a3.946 3.946 0 000-5.571 3.946 3.946 0 00-5.571 0 3.946 3.946 0 000 5.571 3.946 3.946 0 005.57 0z"
              fill="#fff"
            />
            <path
              d="M52.129 35.416l5.571 5.571-5.571 5.571-5.571-5.57 5.57-5.572z"
              fill="#fff"
            />
          </svg>
          <p>
            At Unlock, we believe that the more accessible paid content is the better it will be. To do that we’re making it easy for readers like you to seamlessly pay for and manage your content.
          </p>
          <p>
            If you want to know more about Unlock’s decentralized payment protocol check out our blog.
          </p>
        </div>
        <section>
          <h1
            class="sc-1m7p3zh-0 sc-1m7p3zh-4 ceqgCZ ijvgYK"
          >
            FAQ
          </h1>
          <dl
            class="sc-1m7p3zh-5 clZFdO"
          >
            How do I get a wallet?
          </dl>
          <dt
            class="sc-1m7p3zh-6 eoqktX"
          >
            You need a web3 enabled wallet such as MetaMask for Chrome or Opera for Android.
          </dt>
          <dl
            class="sc-1m7p3zh-5 clZFdO"
          >
            What does it cost to use Unlock?
          </dl>
          <dt
            class="sc-1m7p3zh-6 eoqktX"
          >
            Unlock is free to use though you will have to pay a small transaction fee when purchasing your content. It’s usually just a few cents on top of your purchase.
          </dt>
          <dl
            class="sc-1m7p3zh-5 clZFdO"
          >
            What about privacy?
          </dl>
          <dt
            class="sc-1m7p3zh-6 eoqktX"
          >
            Unlock does not collect any personal information. Like all transactions on the the Ethereum blockchain, details about Unlock transactions are captured in its ledger in an anonymous form.
          </dt>
        </section>
        <section>
          <h1
            class="sc-1m7p3zh-0 sc-1m7p3zh-4 ceqgCZ ijvgYK"
          />
          <div
            class="sc-1m7p3zh-7 iaLJxA"
          >
            Check out our open source code on
             
            <a
              href="https://github.com/unlock-protocol/unlock"
            >
              GitHub
            </a>
            , come
             
            <a
              href="https://unlock-protocol.com/jobs"
            >
              work with us
            </a>
             or simply
             
            <a
              href="mailto:hello@unlock-protocol.com"
            >
              get in touch
            </a>
            .
          </div>
        </section>
        <footer
          class="sc-1cn8ycr-0 jqVjTE"
        >
          <span
            class="sc-1cn8ycr-1 eVOZJs"
          >
            Made with passion in Brooklyn, NY
          </span>
        </footer>
      </div>
      <div
        class="sc-gmrrpf-2 cPuuaA"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
